--- a/C5_ex.html
+++ b/C5_ex.html
@@ -9,7 +9,9 @@
   <body>
     <!--header-->
     <header>
-      <a href="https://infratop.jp/">infratop</a>
+      <h1>
+        <a href="https://infratop.jp/">infratop</a>
+      </h1>
     </header>
     <!--navigation-->
     <nav>
@@ -49,6 +51,10 @@
       <div class="box11"></div>
       <div class="box12"></div>
     </div>
+    
     <!--footer-->
+    <footer>
+      <p class="footer-text">©All rights reserved by Infratop.Inc.</p>
+    </footer>
   </body>
 </html>
